--- a/CleanConmute/Info.plist
+++ b/CleanConmute/Info.plist
@@ -15,9 +15,9 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.1</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>3</string>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
 	<key>LSRequiresIPhoneOS</key>
@@ -32,6 +32,8 @@
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>This application requests your location to calculate the best and greenest route</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This application requests your location to calculate the best and greenest route</string>
+	<key>NSLocationAlwaysUsageDescription</key>
 	<string>This application requests your location to calculate the best and greenest route</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
